[Texmap] css3/filters/filter-animation-from-none-hw.html does not animate https://bugs.webkit.org/show_bug.cgi?id=114026

Patch by Noam Rosenthal <noam@webkit.org> on 2013-04-05
Reviewed by Allan Sandfeld Jensen.

Allow the filter's blending function to take place when animating from/to none.

* platform/graphics/GraphicsLayerAnimation.cpp:
(WebCore::applyFilterAnimation):

Canonical link: https://commits.webkit.org/132389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147746 268f45cc-cd09-0410-ab3c-d52691b4dbfc